# gratitude-network

./: .gitignore  .pre-commit-config.yaml  BUGS.md  Gratitude network PRD.md  README.md  gratitude_network_prd.md  package-lock.json
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt  setup.py
backend/app/: main.py
backend/app/models/: models.py
backend/app/routers/: auth_router.py  feed_router.py  interactions_router.py  posts_router.py  profiles_router.py  search_router.py  social_router.py
backend/app/utils/: database.py  email.py  feed_algorithm.py  image_utils.py  jwt.py  middleware.py  notifications.py  rate_limiter.py  redis_client.py  security.py  validation.py
backend/tests/: conftest.py  test_auth.py  test_cors.py  test_new_features.py  test_posts.py  test_social.py
frontend/: health-check-ver1.js  next.config.ts  package-lock.json  package.json  puppeteer-test.js
frontend/src/: theme.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/feed/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/search/: SearchContent.tsx  page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: ChakraProviderWrapper.tsx  CreatePostForm.tsx  Layout.tsx  Navbar.tsx  PostCard.tsx
frontend/src/components/Comments/: CommentInput.tsx  CommentItem.tsx  CommentSection.tsx
frontend/src/components/Profile/: EditProfileForm.tsx
frontend/src/context/: AuthContext.tsx
infra/: db.env  docker-compose.yml  pgadmin.env
(+6 files in other folders)
